fixed spacing on pie

--- a/src/app/home/home-chart/home-chart.component.css
+++ b/src/app/home/home-chart/home-chart.component.css
@@ -1,4 +1,4 @@
 div {
     float: right;
-    padding-right: 275px;
+    padding-right: 70px;
 }
